syntax = "proto3";

option java_package = "com.twidere.twiderex.preferences.proto";
option java_multiple_files = true;

message MiscPreferences {
  enum ProxyType {
    HTTP = 0;
    REVERSE = 1;
  }

  string nitterInstance = 1;
  bool useProxy = 2;
  ProxyType proxyType = 3;
  string proxyServer = 4;
  int32 proxyPort = 5;
  string proxyUserName = 6;
  string proxyPassword = 7;
}
